--- a/bootstrap.css
+++ b/bootstrap.css
@@ -4173,7 +4173,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #fff;
-  background-color: #337ab7;
+  background-color: #0f4c81;
 }
 .nav-stacked > li {
   float: none;
