--- a/bootstrap.css
+++ b/bootstrap.css
@@ -5019,7 +5019,7 @@ a.badge:focus {
 }
 .list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #337ab7;
+  color: #0f4c81;
   background-color: #fff;
 }
 .list-group-item > .badge {
