--- a/bootstrap.css
+++ b/bootstrap.css
@@ -5285,10 +5285,10 @@ a.thumbnail.active {
 }
 .media-object {
   display: block;
-  max-block-size: 15%;
 }
 .media-object.img-thumbnail {
-  max-width: none;
+  max-width: 15%;
+  max-height: 15%;
 }
 .media-right,
 .media > .pull-right {
