--- a/bootstrap.css
+++ b/bootstrap.css
@@ -5285,10 +5285,10 @@ a.thumbnail.active {
 }
 .media-object {
   display: block;
+  width: 20%;
 }
 .media-object.img-thumbnail {
-  width: 15%;
-  height: 15%;
+  max-width: none;
 }
 .media-right,
 .media > .pull-right {
