--- a/bootstrap.css
+++ b/bootstrap.css
@@ -4,6 +4,10 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
+imgsize{
+    max-width: 250px;
+}
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -5271,7 +5275,6 @@ a.thumbnail.active {
 }
 .media {
   margin-top: 15px;
-  max-inline-size: 200px;
 }
 .media:first-child {
   margin-top: 0;
